--- a/templates/components/forms/auth_forms/lecturer_form.html
+++ b/templates/components/forms/auth_forms/lecturer_form.html
@@ -4,7 +4,7 @@
 
 <div class="d-flex flex-column align-items-center">
     <div class="d-flex gap-3 mb-2">
-        <a role="button" href="{{url_for('core_routes.student_sign_up')}}" class="btn btn-outline-secondary rounded-pill"
+        <a role="button" href="{{url_for('core_routes.student_sign_up')}}" class="btn btn-outline-green rounded-pill"
             data-user="student">Student</a>
         <a role="button" href="{{url_for('core_routes.lecturer_sign_up')}}"
             class="btn btn-green text-white rounded-pill" data-user="lecturer">Lecturer</a>
