--- a/templates/components/forms/auth_forms/student_form.html
+++ b/templates/components/forms/auth_forms/student_form.html
@@ -5,7 +5,7 @@
         <a role="button" href="{{url_for('core_routes.student_sign_up')}}" class="btn btn-green text-white rounded-pill"
             data-user="student">Student</a>
         <a role="button" href="{{url_for('core_routes.lecturer_sign_up')}}"
-            class="btn btn-outline-secondary rounded-pill" data-user="lecturer">Lecturer</a>
+            class="btn btn-outline-green rounded-pill" data-user="lecturer">Lecturer</a>
     </div>
 </div>
 <form id="student" action="{{ url_for('core_routes.student_sign_up') }}" method="post" name="register_user_form"
