--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRClass Pro {% block title %}{% endblock %}</title>
+    <title>Academic Connect{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -19,6 +19,28 @@
             width: 100%;
             margin: 0px;
             padding: 0px;
+        }
+
+        .btn-green{
+            background-color:rgb(95,201,169) ;
+        }
+
+        .btn-green:hover{
+            background-color:rgb(82,173,146) ;
+        }
+
+        .btn-outline-green{
+            border-color:rgb(95,201,169);
+            color:rgb(40, 40, 40);
+        }
+
+        .btn-outline-green:hover{
+            background-color:rgb(111,235,197) ;
+            color: white;
+        }
+
+        .bg-green{
+            background-color:rgb(95,201,169) ;
         }
     </style>
     {% block style %}{% endblock %}
