Set up the views

--- a/templates/views/LandingpageView.html
+++ b/templates/views/LandingpageView.html
@@ -5,10 +5,9 @@
 
 {% block content %}
 {% if current_user.is_authenticated %}
-
-    {% include "components/navbar/student-navbar.html" %}
-    {%else %}
-    {% include "components/navbar/no-auth-navbar.html" %}
+{% include "components/navbar/student-navbar.html" %}
+{%else %}
+{% include "components/navbar/no-auth-navbar.html" %}
 {% endif %}
 
 
@@ -17,21 +16,21 @@
         <div class="d-flex flex-column align-items-center mt-5">
             <div class="row justify-content-center">
                 <div class="col-8 d-flex justify-content-center ">
-                <img src="/static/images/logo.jpg" />
-                    </div>
+                    <img src="/static/images/logo.jpg" alt="acedemic connect logo"/>
+                </div>
                 <p class="fs-2 fw-bold text-center">
                     Booking made easy!
                 </p>
-
-            <div class="row">
-                <p class="fw-lighter text-center">Book consultation sessions with your lecturer or supervisor easily.</p>
+                <div class="row">
+                    <p class="fw-lighter text-center">Book consultation sessions with your lecturer or supervisor
+                        easily.</p>
+                </div>
             </div>
         </div>
-               </div>
         <div class="row">
             <div class="d-flex justify-content-center">
                 <a role="button" href="/login" class="btn btn-green text-light" style="width: 50vh;">
-                    Set a meeting with your supervisor!
+                    Set a meeting with your lecturer!
                 </a>
             </div>
         </div>
