Fixed logo size for mobile devices

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -6,7 +6,7 @@
     <div class="container-lg">
         {% include "security/_messages.html" %}
         <div class="d-flex flex-column align-items-center">
-            <img src="/static/images/logo.jpg" alt="logo" class="img-thumbnail" style="border:0px;"/>
+            <img src="/static/images/logo.jpg" alt="acedemic connect logo" style="width: 320px; height: 250px;"/>
             <p class="fs-3 fw-medium">Sign Up</p>
             <p class="fs-6 fw-lighter text-center">
                 Create an account using your institutions credentials
