--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -20,7 +20,7 @@ prop_next %}
 <div class="d-flex align-items-center h-100">
   <div class="container-lg">
     <div class="d-flex flex-column align-items-center">
-        <img src="/static/images/logo.jpg" alt="logo" />
+      <img src="/static/images/logo.jpg" alt="acedemic connect logo" style="width: 320px; height: 250px;"/>
       <p class="fs-3 fw-medium">Sign In</p>
       <p class="fs-6 fw-lighter text-center">
         Sign in using your institutions credentials
