--- a/templates/views/lecturer/partial/History.html
+++ b/templates/views/lecturer/partial/History.html
@@ -2,7 +2,7 @@
 {% block partial %}
 <div class="row">
     <div class="container mt-3">
-        <div class="col-6">
+        <div class="row-col-3">
             <a role="button" class="btn rounded-pill border border-success-subtle" href="/lecturer?tag=Upcoming">Upcoming</a>
             <a role="button" class="btn rounded-pill border-success-subtle" href="/lecturer?tag=Pending">Pending</a>
             <a role="button" class="btn rounded-pill bg-success-subtle" href="/lecturer?tag=History">History</a>
