--- a/templates/views/LandingpageView.html
+++ b/templates/views/LandingpageView.html
@@ -16,7 +16,7 @@
         <div class="d-flex flex-column align-items-center mt-5">
             <div class="row justify-content-center">
                 <div class="col-8 d-flex justify-content-center ">
-                    <img src="/static/images/logo.jpg" alt="acedemic connect logo"/>
+                    <img src="/static/images/logo.jpg" alt="acedemic connect logo" style="width: 320px; height: 250px;"/>
                 </div>
                 <p class="fs-2 fw-bold text-center">
                     Booking made easy!
