--- a/templates/views/RescheduleAppointment.html
+++ b/templates/views/RescheduleAppointment.html
@@ -35,7 +35,7 @@
                     New appointment details
                 </p>
                 <label for="selectNewDate" class="form-label fw-medium">Date</label>
-                <input class="form-control" type="date" />
+                <input class="form-control" type="date" id="selectNewDate" />
                 <label for="selectNewTimeslot" class="form-label fw-medium">New timeslot</label>
                 <select id="selectNewTimeslot" class="form-select" aria-label="New timeslot">
                     <option selected>Choose new timeslot</option>
