--- a/templates/views/student/partial/Pending.html
+++ b/templates/views/student/partial/Pending.html
@@ -2,7 +2,13 @@
 {% block partial %}
 <div class="row">
     <div class="container mt-3">
-        <div class="row-col-3">
+        <a class="btn rounded-circle text-success border border-0" href="{{url_for('student_route.book')}}">
+            <span class="d-flex material-symbols-outlined fs-1 justify-content-center align-items-center">
+                calendar_add_on
+            </span>
+            <div>Schedule</div>
+        </a>
+        <div class="row-col-3 mb-3">
             <a role="button" class="btn rounded-pill border-success-subtle" href="/student?tag=Upcoming">Upcoming</a>
             <a role="button" class="btn rounded-pill bg-success-subtle" href="/student?tag=Pending">Pending</a>
             <a role="button" class="btn rounded-pill border border-success-subtle" href="/student?tag=History">History</a>
