--- a/templates/base.html
+++ b/templates/base.html
@@ -50,20 +50,14 @@
     <div id="app" class="h-100">
         {% block content %}{% endblock %}
     </div>
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
     <template id="multiselect-template">
         <div class="dropdown">
             <div class="form-control d-flex align-items-center w-100"
                 :class="{ 'bg-body-secondary' : isDropdownDisabled }" :disabled="isDropdownDisabled">
                 <span class="material-symbols-outlined" style="pointer-events: none;">search</span>
                 <input type="text" class="form-control border border-0 shadow-none" :id="searchFieldId"
-                    placeholder="Search" @change="(e) => fetchSearch(e.target.value)" v-model="searchText" :disabled="isDropdownDisabled" />
+                    placeholder="Search" @change="(e) => fetchSearch(e.target.value)" v-model="searchText"
+                    :disabled="isDropdownDisabled" />
             </div>
             <div class="dropdown-menu w-100" :class="{ 'show' : isDropdownOpen }">
                 <ul class="list-group list-group-flush" :id="dropdownId" v-if="isDropdownOpen">
@@ -114,6 +108,13 @@
             </div>
         </div>
     </template>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+        crossorigin="anonymous"></script>
     <!-- Bootstrap end.-->
     {% block script %}{% endblock %}
 </body>
