--- a/templates/views/student/BookAppointment.html
+++ b/templates/views/student/BookAppointment.html
@@ -73,8 +73,8 @@
     </div>
 </div>
 {% endblock %}
-{% block script%}
-<script src="/static/custom.js" type="module"></script>
+{% block script %}
+<script src="/static/custom.js" type="text/javascript"></script>
 <script>
     const collect_submit = document.getElementById('bookSubmit');
 
@@ -94,47 +94,58 @@
         ].join('');
     };
 
-    window.$dev = {ms : app._instance};
+    window.$dev = { ms: app._instance.refs.ms, sp: app._instance.refs.sp };
 
     collect_submit.addEventListener('click', () => {
-        const appointment_module = app._instance.refs.ms.currentTags[0];
-        const appointment_timeslot = app._instance.refs.sp;
-        const appointment_reason = document.getElementById("bookAppointmentReason");
-        const appointment_date = document.getElementById("bookSelectDate");
-        /*
-        const form_data = { appointment_module: appointment_module.value, appointment_timeslot: appointment_timeslot.value, appointment_reason: appointment_reason.value, appointment_date: appointment_date.value };
-        console.log(form_data)
-        const endpoint = "/v1/api/schedule_appoinment";
-        const requestOptions = {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(form_data)
-        };
+        const appointment_module_code = app._instance.refs.ms.currentTags[0];
+        const appointment_timeslot_id = app._instance.refs.sp.selectedTime;
+        const appointment_reason = document.getElementById("bookAppointmentReason").value;
+        const appointment_date = document.getElementById("bookSelectDate").value;
 
-        fetch(endpoint, requestOptions)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                if (date.code === -1) {
+        const form_data = { appointment_module_code, appointment_timeslot_id, appointment_reason, appointment_date };
+
+        if (appointment_module_code && appointment_timeslot_id && appointment_reason && appointment_date) {
+            console.log(form_data);
+            const endpoint = "/v1/api/schedule_appoinment";
+            const requestOptions = {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(form_data)
+            };
+
+            fetch(endpoint, requestOptions)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    if (data.code === -1) {
+                        appendAlert(`Something went wrong. Try again later.`, 'warning');
+                        const toastItem = document.querySelector("div.toast");
+                        if (toastItem) {
+                            const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastItem);
+                            toastBootstrap.show()
+                        };
+                    } else if (data.code === 1) {
+                        window.location.assign("/student?tag=Upcoming")
+                    }
+                })
+                .catch(error => {
+                    console.error('There was a problem', error);
                     appendAlert(`Something went wrong. Try again later.`, 'warning');
-                    const toastItem = document.querySelector("div.toast");
-                    if (toastItem) {
-                        const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastItem);
-                        toastBootstrap.show()
-                    };
-                } else if (data.code === 1) {
-                    window.location.assign("/student?tag=Upcoming")
-                }
-            })
-            .catch(error => {
-                console.error('There was a problem', error);
-            })*/
+                });
+        } else {
+            appendAlert(`Please fill in all the fields.`, 'warning');
+            const toastItem = document.querySelector("div.toast");
+            if (toastItem) {
+                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastItem);
+                toastBootstrap.show()
+            };
+        }
     });
 
 </script>
