Edited appointment tile to fetch directly from db

--- a/templates/macros/__appointment_tile__.html
+++ b/templates/macros/__appointment_tile__.html
@@ -1,5 +1,5 @@
-{% macro self(data, type, datetime) -%}
-<a role="button" class="d-flex row link-underline link-underline-opacity-0 link-success" href="appointment/{{ data.appointment_uuid }}?type={{type}}">
+{% macro self(data) -%}
+<a role="button" class="d-flex row link-underline link-underline-opacity-0 link-success" href="appointment/{{ data.appointment_uuid }}">
     <div class=" col-3 ">
         <span class="fw-medium text-center fs-2  mb-0">{{ data.day_of_month }}</span>
         <div class="row mt-0 p-0">
@@ -7,10 +7,10 @@
         </div>
     </div>
     <div class="col-9">
-        <span class="fs-4 mb-0 fw-medium">{{ data.student_name }}</span>
+        <span class="fs-4 mb-0 fw-medium">{{ data.student_fullname }}</span>
         <div class="row mt-0 p-0">
             <div class="col">
-                <p class="fw-lighter">{{ datetime.fromisoformat(data.appointment_datetime).strftime("%A, %I:%M%p") }}</p>
+                <p class="fw-lighter">{{ data.day_time }}</p>
             </div>
         </div>
     </div>
