--- a/templates/components/forms/auth_forms/student_form.html
+++ b/templates/components/forms/auth_forms/student_form.html
@@ -13,6 +13,10 @@
     {{ register_student_form.csrf_token}}
     {{ render_form_errors(register_student_form) }}
 
+    {{ render_field_with_errors(register_student_form.first_name, class="form-control col-lg-4 col-md-4 col-sm-8 ",
+    placeholder="First Name") }}
+    {{ render_field_with_errors(register_student_form.last_name, class="form-control col-lg-4 col-md-4 col-sm-8 ",
+    placeholder="Last Name") }}
     {{ render_field_with_errors(register_student_form.email, class="form-control col-lg-4 col-md-4 col-sm-8 ",
     placeholder="Email") }}
     {{ render_field_with_errors(register_student_form.student_number, class="form-control col-lg-4 col-sm-8 ",
